--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "phpoffice/phpword": "^1.0"
+        "phpoffice/phpword": "^1.0",
+        "mpdf/mpdf": "^8.1.3"
     }
 }
