--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,9 @@
 {
     "require": {
         "phpoffice/phpword": "^1.0",
-        "mpdf/mpdf": "^8.1.3"
+        "mpdf/mpdf": "^8.1.3",
+        "phpoffice/phpspreadsheet": "^1.27"
     }
 }
+
+
